--- a/ExpenseReportPage.xaml
+++ b/ExpenseReportPage.xaml
@@ -9,6 +9,19 @@
       Title="ExpenseIt - View Expense">
 
     <Grid>
+        <!-- Templates to display expense data-->
+        <Grid.Resources>
+            <!-- Reason item template -->
+            <DataTemplate x:Key="typeItemTemplate">
+                <Label Content="{Binding XPath=@ExpenseType}"></Label>
+            </DataTemplate>
+            <!-- Amount item template -->
+            <DataTemplate x:Key="amountItemTemplate">
+                <Label Content="{Binding XPath=@ExpenseAmount}"></Label>
+            </DataTemplate>
+        </Grid.Resources>
+        
+        <!-- Layout of main grid-->
         <Grid.Background>
             <ImageBrush ImageSource="fence.jpg" Viewbox="0.5,0.5,0.5,0.5"></ImageBrush>
         </Grid.Background>
@@ -26,8 +39,10 @@
         <Label Grid.Column="1" Style="{StaticResource headerTextStyle}">
             Expense Report For:
         </Label>
-
+        
+        <!-- Grid 2 -->
         <Grid Margin="10" Grid.Column="1" Grid.Row="1">
+            <!-- Grid 2 layout -->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
@@ -41,30 +56,21 @@
             <!--Name-->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Name:</Label>
-                <Label Style="{StaticResource labelStyle}">.</Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Name}"></Label>
             </StackPanel>
 
             <!--Dept-->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Department</Label>
-                <Label Style="{StaticResource labelStyle}">.</Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Department}"></Label>
             </StackPanel>
        
-            <!--Grid within grid for expenses table using an inserted style section instead of the 'css' or inline style-->
+            <!--Grid within grid for expenses table -->
             <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left">
-                <DataGrid AutoGenerateColumns="False" RowHeaderWidth="0">
-                    <DataGrid.ColumnHeaderStyle>
-                        <Style TargetType="{x:Type DataGridColumnHeader}">
-                            <Setter Property="Height" Value="35"></Setter>
-                            <Setter Property="Padding" Value="5"></Setter>
-                            <Setter Property="Background" Value="#4e87d4"></Setter>
-                            <Setter Property="Background" Value="White"></Setter>
-                        </Style>
-                    </DataGrid.ColumnHeaderStyle>
-
+                <DataGrid ItemsSource="{Binding XPath=Expense}" ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="ExpenseType"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Amount"></DataGridTextColumn>
+                        <DataGridTemplateColumn Header="ExpenseType" CellTemplate="{StaticResource typeItemTemplate}"></DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="Amount" CellTemplate="{StaticResource amountItemTemplate}"></DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
